[project]
name = "git-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "email-validator>=2.2.0,<3.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
    "jwt>=1.3.1,<2.0.0",
    "numpy>=1.26.4,<2.0.0",
    "pandas>=2.2.2,<3.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "psycopg2-binary>=2.9.9,<3.0.0",
    "pydantic>=2.8.0,<3.0.0",
    "pytest>=9.0.3",
    "python-dotenv>=1.0.1,<2.0.0",
    "python-multipart>=0.0.9,<1.0.0",
    "redis>=5.0.1,<6.0.0",
    "requests>=2.32.3,<3.0.0",
    "sqlalchemy>=2.0.31,<3.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
]
